Update on Overleaf.

--- a/tex/fellow.tex
+++ b/tex/fellow.tex
@@ -1,4 +1,6 @@
-My thesis on \textbf{computational intelligence (CI)} was seminal to my current research on \textbf{data science (DS)}, \textbf{artificial intelligence~(AI)}, and their impact on \textbf{socially relevant problems}. Concerning DS, I supervise applied research projects with both the public and private sectors. Partners include the Brazilian Judicial Branch and Ministry of Education, as well as regional, national, and multi-national companies in fields as diverse as retail, telecommunications, and energy. Regarding AI, I supervise graduate students on theses involving deep and automated machine learning, as well as the intersection of multi-objective optimization with other CI domains, such as multi-dimensional visualization and dynamic optimization. Finally, regarding socially revelant problems, I have assisted in the fight against the COVID-19 pandemic through science publication and communication, in attempt to counter the intensive disinformation campaign held in Brazil. 
+% !TEX root = tex/main.tex
+
+My thesis on \textbf{computational intelligence (CI)} was seminal to my current research on \textbf{data science (DS)}, \textbf{artificial intelligence~(AI)}, and their impact on \textbf{socially relevant problems}. Concerning DS, I supervise applied research projects with both the public and private sectors. Partners include the Brazilian Judicial Branch and Ministry of Education, as well as regional, national, and multi-national companies in fields as diverse as retail, telecommunications, and energy. Regarding AI, I supervise graduate students on theses involving deep and automated machine learning, as well as the intersection of multi-objective optimization with other CI domains, such as multi-dimensional visualization and dynamic optimization. Finally, regarding socially relevant problems, I have assisted in the fight against the COVID-19 pandemic through science publication and communication, in attempt to counter the intensive disinformation campaign held in Brazil. 
 
 % \cvlistdoubleitem{computational intelligence}{data science}
 % \cvlistdoubleitem{artificial intelligence}{accountability}
@@ -127,46 +129,3 @@ My thesis on \textbf{computational intelligence (CI)} was seminal to my current 
 % \cventry{2011}{GRACE: a generational randomized ACO for the multi-objective shortest path problem}{EMO}{}{}{}
 
 % \cventry{2009}{FAITH: a desktop virtual reality system for fingerspelling}{SVR}{}{}{}
-
-%----------------------------------------------------------------------------------------
-%	SUPERVISION
-%----------------------------------------------------------------------------------------
-
-\section{Supervision}
-
-% \subsection{Ph.D. theses}
-
-\cventry{2022}{Design configuration for the MMAS algorithm applied to the travelling salesman problem with dynamic demands}{Ph.D. thesis co-supervisor}{Sabrina M. de Oliveira}{Computational mathematical modeling, Federal Center of Technological Education of Minas Gerais (CEFET-MG), Brazil}{}
-
-% \subsection{M.Sc. theses}
-
-\cventry{2021}{A case study on customer segmentation of a supermarket chain}{M.Sc. thesis supervisor}{Wellerson V. Oliveira}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}
-
-\cventry{2021}{Sales forecasting for a supermarket chain in Natal, Brazil: an empirical assessment}{M.Sc. thesis supervisor}{Fernanda M. de Almeida}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2021}{Assessing irace for automated machine and deep learning in computer vision}{M.Sc. thesis supervisor}{Carlos E. M. Vieira}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2018}{Uma abordagem metaheurística para o problema de alocação de horário escolar no IFRN}{M.Sc. thesis supervisor}{Lucas H. A. Dantas}{Systems and computing, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2018}{Predizendo hotspots criminais com aprendizado de máquina}{M.Sc. thesis co-supervisor}{Adelson D. de Araújo Júnior}{Systems and computing, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-% \subsection{B.Sc. theses}
-
-% \cventry{2021}{Comparando embeddings contextuais no problema de busca de similaridade semântica em português}{Supervisor}{Information technology}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-% \cventry{2019}{Assessing irace for automated machine learning}{Supervisor}{Computer science}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-% \cventry{2019}{Using artificial intelligence to aid depression detection}{Supervisor}{Computer engineering}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-
-%----------------------------------------------------------------------------------------
-%	LANGUAGES SECTION
-%----------------------------------------------------------------------------------------
-
-\section{Languages}
-
-\cvlanguage{Portuguese}{Fluent}{Mother language}
-\cvlanguage{English}{Fluent}{TOEFL iBT Score 108}
-\cvlanguage{Spanish}{Fluent}{European Union Reference Level C1}
-\cvlanguage{French}{Intermediate}{European Union Reference Level B1}
-\cvlanguage{Italian}{Intermediate}{European Union Reference Level B1}
