--- a/tex/lecturer.tex
+++ b/tex/lecturer.tex
@@ -1,49 +1,4 @@
-\documentclass[11pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
-
-\moderncvstyle{casual} % CV theme - options include: 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\moderncvcolor{green} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
-
-\usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
-\usepackage{color}
-
-\usepackage[scale=0.92]{geometry} % Reduce document margins
-%\setlength{\hintscolumnwidth}{3cm} % Uncomment to change the width of the dates column
-%\setlength{\makecvtitlenamewidth}{10cm} % For the 'classic' style, uncomment to adjust the width of the space allocated to your name
-
-\usepackage[resetlabels,labeled]{multibib}
-\newcites{Journals}{Journals}
-\newcites{Chapters}{Book chapters}
-\newcites{Conferences}{Conference proceedings}
-
-%----------------------------------------------------------------------------------------
-%	NAME AND CONTACT INFORMATION SECTION
-%----------------------------------------------------------------------------------------
-
-\firstname{\Huge Leonardo C. T.} % Your first name
-\familyname{\Huge Bezerra} % Your last name
-% All information in this block is optional, comment out any lines you don't need
-% \title{Research curriculum}
-\address{Digital Metropolis Institute (IMD), Federal University of Rio Grande do Norte (UFRN)}{leonardo.bezerra@ufrn.br}
-% \mobile{+55 (84) 9 8892 0288}
-% \email{leonardo.bezerra@ufrn.br}
-% \photo[200px][0.4pt]{us.jpg} 
-% The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
-%\quote{"Quite often in nature, when waves are reflected from obstacles, not all wave energy is reflected: some is \textcolor{olive}{absorbed} by the obstacle and some is \textcolor{olive}{transmitted past} the obstacle."
-%\newline
-%- \textcolor{olive}{Dean and Dalrymple}}
-
-%----------------------------------------------------------------------------------------
-
-\begin{document}
-
-\makecvtitle % Print the CV title
-
-\vspace{-1.cm}
-
-%----------------------------------------------------------------------------------------
-%	INTERESTS
-%----------------------------------------------------------------------------------------
-
+% !TEX root = tex/main.tex
 
 % committed
 
@@ -114,55 +69,124 @@
 
 % contribute to one or more of the School’s multidisciplinary research groups
 
-\section{Teaching}
+My current position at Federal University of Rio Grande do Norte~(UFRN) as a Lecturer in Big Data has provided me with the opportunity to help (re)formulate different educational programmes (undergraduate and postgraduate) and supervise talented undergraduate, postgraduate apprenticeship, and Master's students. I have also successfully co-supervised a PhD student, since I was not allowed to be a main PhD supervisor yet. Importantly, I have helped propose artificial intelligence~(AI) and data science~(DS) tracks for both the undergraduate and Master's programmes, as well as a novel professional doctorate programme in information technology~(IT). Finally, I have taken a proactive approach to learning, having designed and delivered 19 different course modules, which can be broadly categorized into computational thinking (ranging from abstract data types to coding interview preparation) and AI/DS (with a focus on non-programmers). All of these course modules were designed with an emphasis on self-taught learning, which made them ideal for the COVID-19 pandemic period (and online learning thereof). In addition to having published a book chapter about the methodology I have employed, I have also partnered with Huawei Telecommunications in Brazil to provide an HCIA-AI deep learning certificate training which was offered online.% to over 200 students.
 
-My current position at Federal University of Rio Grande do Norte~(UFRN) as a Lecturer in Big Data has provided me with the opportunity to help (re)formulate different educational programs (B.Sc. and M.Sc.) and supervise talented B.Sc., postgraduate apprenticeship, and M.Sc. students. I have also successfully co-supervised a Ph.D. student, since I was not allowed to be a main Ph.D. supervisor yet. Importantly, I have helped propose A.I./data science tracks for both the B.Sc. and M.Sc. programs, as well as a novel professional doctorate program in information technology. Finally, I have taken a proactive approach to learning, having designed and delivered 19 different course modules, which can be broadly categorized into computational thinking (ranging from abstract data types to programming interview preparation) and A.I./data science (with a focus on non-programmers). All of these course modules were designed with an emphasis on self-taught learning, which made them ideal for the COVID-19 pandemic period (and online learning thereof). In addition to having published a book chapter about the methodology I have employed, I have also partnered with Huawei Telecommunications in Brazil to provide an HCIA-AI deep learning cerfiticate training program which was offered online.% to over 200 students.
+\section{Educational programmes}
 
-% \cvlistdoubleitem{computational intelligence}{data science}
-% \cvlistdoubleitem{artificial intelligence}{accountability}
-
-% Doutor em Engenharia e Tecnologia pela Université Libre de Bruxelles (ULB, Bélgica), possui experiência em pesquisa relacionada à Inteligência Computacional e sua aplicação em Ciência de Dados. Desde 2017, atua na Universidade Federal do Rio Grande do Norte (UFRN) como professor adjunto na área de Big Data. Entre 2018 e 2022, foi membro permanente do Programa de Pós-Graduação em Tecnologia da Informação (PPgTI, conceito CAPES 4), onde orientou diferentes dissertações de mestrado profissional em colaboração com grupos de pesquisa internacionais e empresas. Desde 2022, é membro permanente do Programa de Pós-Graduação em Sistemas e Computação (PPgSC, conceito CAPES 5). Além de publicações nos principais veículos científicos nos campos da visão computacional, NLP e Aprendizado de Máquina automatizado, tem atuado em projetos junto ao poder público e à iniciativa privada. No campo da mineração de dados, ajudou a coordenar a revisão e atualização da Cine Brasil junto ao INEP, propondo a versão 2018, formulando sua tabela de equivalência unificada com a versão 2000 e a aplicando a todos os cursos de graduação e sequenciais do Brasil. No campo da análise de agrupamentos, ajudou a segmentar os clientes da rede de supermercados Nordestão, a terceira maior rede do Nordeste. No campo da análise de séries temporais, ajudou a modelar as vendas varejistas dessa rede de supermercados, bem como a ocorrência de crimes junto à Secretaria de Segurança Pública do Rio Grande do Norte. Atualmente, atua junto ao TRF5 e ao grupo Neoenergia para formação de recursos humanos e orientação de projetos nos âmbitos do Poder Judiciário e da indústria de energia. Ambos os projetos são oriundos de atuação prévia, respectivamente a atuação docente na Residência em Tecnologia da Informação e a organização de um hackathon propondo painéis de monitoramento da produção de energia eólica e otimização da recomposição das redes de distribuição de energia.
-
-
-
-%----------------------------------------------------------------------------------------
-%	HISTORY SECTION
-%----------------------------------------------------------------------------------------
-\section{Educational programs}
-
-\subsection{Doctorate}
-\cventry{Proponent}{Information technology}{Professional}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\subsection{Academic post-graduate programmes}
 \cventry{2022-}{Systems and computing}{DSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2022-}{Systems and computing}{MSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}%
+{I have helped the reformulation of these programmes in at least three important ways, though I have joined them recently. First, I helped merge two research lines that were similar in their topics, namely artificial intelligence and heuristic optimization. This merge reflects the current joint efforts observed in these research fields, and have helped update the programmes to match this trend. Second, I have proposed a policy framework to increase the international visibility of the programmes, particularly regarding dual degrees. Finally, I have proposed means for working students to pursue an MSc or a DSc degree, given that the number of students willing to enroll full-time in the programmes is very reduced. In detail, I have proposed alternative funding opportunities for students, as the official funding efforts from the government are not competitive with current IT market standards. In addition, I have proposed alternative course schedules, which were previously validated with industrial partners. Altogether, these improvements are expected to help the programmes establish themselves internationally in the near future.}
 
-\subsection{Masters}
-\cventry{2022-}{Systems and computing}{MSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
-\cventry{2018-2021}{Information technology}{Professional}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\subsection{Professional post-graduate programmes}
+\cventry{Proponent}{Information technology}{Doctorate}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2019-2021}{Information technology}{Master's}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2018-2019}{Software engineering}{Master's}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}%
+{I was invited to join the professional Master's on Software Engineering at the end of 2017, in an effort to restructure and evolve the programme. I helped significantly reformulate the programme in at least three different ways. First, I helped the programme expand to a professional Master's on Information Technology, including two novel research lines, namely (i)~computational intelligence (AI/DS) and (ii)~IT infrastructure. Second, I helped increase the number of lecturers in the programme, as a result of (i)~assessing the publications and deliverables records of the existing lecturers; (ii)~identifying the key weaknesses the programme had to address, and; (iii)~coordinating the recruitment process. Third, these contributions enabled the programme to be eligible for a professional doctorate programme, which I helped propose and was recently approved by the university.}
 
 \subsection{Postgraduate apprenticeship}
-\cventry{2021-2024}{Information technology}{5th Region Federal Regional Court (TRF5)}{Recife, PE, Brazil}{}{}
-\cventry{2018-2024}{Information technology}{Federal Justice Section of Rio Grande do Norte (JFRN)}{Natal, RN, Brazil}{}{}
-\cventry{2018-2024}{Information technology}{Regional Electoral Court of Rio Grande do Norte (TRE-RN)}{Natal, RN, Brazil}{}{}
-\cventry{2019-2021}{Information technology}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN)}{Natal, RN, Brazil}{}{}
+\cventry{2021-2024}{Information technology}{5th Region Federal Regional Court~(TRF5)}{Recife, PE, Brazil}{}{}
+\cventry{2018-2024}{Information technology}{Federal Justice Section of Rio Grande do Norte~(JFRN)}{Natal, RN, Brazil}{}{}
+\cventry{2018-2024}{Information technology}{Regional Electoral Court of Rio Grande do Norte~(TRE-RN)}{Natal, RN, Brazil}{}{}
+\cventry{2019-2021}{Information technology}{Court of Accounts of Rio Grande do Norte~(TCE-RN)}{Natal, RN, Brazil}{}%
+{I have designed and delivered course modules for postgraduate apprenticeships in partnership with different branches of the Brazilian Judicial Branch. In most of the apprenticeships, I have also supervised students regarding their final project. More importantly, I have been one of the supervisors for the business intelligence, AI, and DS projects that were carried throughout the apprenticeship that was hosted by the most recent partner, the 5th Region Federal Regional Court~(TRF5). This was the first apprenticeship where activities were carried online, in order to reflect the geographically distributed nature of the partner. Results exceeded expectations and led to the second round of the apprenticeship, for which I am also one of the project supervisors.}
 
 \subsection{Undergratuate}
-\cventry{2017-}{Information technology}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
-\cventry{2017-}{Computer science}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
-\cventry{2017-}{Computer engineering}{BEng}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
+\cventry{2017-}{Information technology}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2017-}{Computer science}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2017-}{Computer engineering}{BEng}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}%
+{I have been lecturing courses for these three, intertwined undergraduate programmes over the past 6 years. In detail, the two initial years of these programmes share a common curriculum, which focuses on computer programming and mathematics. In this context, I have helped (re-)formulate the computer programming part of the shared curriculum, recasting it to a broader focus on problem-solving through computational thinking. The substantial changes I helped propose have made the curriculum more practical, up-to-date, and engaging for students, with also a deeper knowledge of algorithmic techniques, programming paradigms, and software development. Currently, my focus has been on stirring a novel branch in the shared curriculum, dedicated to the intersection between IT and society. Specifically, my goal is to help the curriculum promote student awareness regarding the problems in society that IT might help solve or create, as well as how to antecipate and respond to them. A second, important way in which I have helped reformulate the BSc in IT was the proposal of the DS and AI tracks, which are certified minors that students can enroll during their undergraduate studies. These proposals were both strategical and timely, as the demand in students with expertise on these topics from projects and the market surged over the past years.}
+
 \cventry{2016-2017}{Mathematical computing}{BSc}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
 \cventry{2016-2017}{Computer science}{BSc}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
 \cventry{2016-2017}{Computer engineering}{BEng}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
 
-\section{Supervision (apprenticeship and undergraduate)}
+\section{Course modules}
 
-\subsection{Postgraduate apprenticeship}
+\subsection{Computational thinking}
 
-\cventry{2021}{Autonomous income in the municipalities of the Rio Grande do Norte state}{Postgraduate apprenticeship on Information technology}{Paulo Roberto Oliveira de Melo}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
+\cventry{2023-}{Abstract data types}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2017-}{Algorithms and data structures}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped (re-)design and deliver these modules on abstract data types, algorithms, and data structures. In detail, the original course curriculum only comprised example algorithms and data structures, and had an above 50\% failure rate. Two modifications helped change this scenario, as follows. First, introducing abstract data types and their applications prior to the data structures used to implement them significantly improved student engagement and awareness of the importance of data structures. Second, introducing iterative and recursive algorithmic techniques rather than algorithm examples (such as sorting) improved student understanding of how to implement efficient solutions, and therefore data structures. The success rate of the course after theses changes often surpasses 75\%, in part due also to student evaluation, which is performed via tutorials as well as coding interviews and exercises. Indeed, the success of the revised module led to the creation of the abstract data types independent module, and the material used for the course is now publicly available as a GitHub repository.}
 
-\cventry{2020}{A data-driven approach to aid payment auditing in the Court of Accounts of the State of Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Gabriel Felipe Azevedo de Sousa}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
+\cvline{}{\hrule}
 
-\cventry{2020}{Business intelligence to aid electoral accounts auditing in Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Giuliard Cosmo Rodrigues}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
+\cventry{2023-}{Fundamentals of multi-paradigm, high-level software development}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2017-2018}{Programming languages}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped (re-)design and deliver these modules on the fundamentals of software development using multiple programming paradigms and high-level programming languages. In detail, the original course curriculum (i)~only comprised computer programming, disregarding critical software development fundamentals such as testing, versioning, and deployment; (ii)~only adopted the procedural and object-oriented programming paradigms, both from purist perspectives, and; (iii)~adopted low-level programming languages. Altogether, these factors hindered student engagement as courses were seen as unrealistic, leading to an above 50\% failure rate. Introducing software development fundamentals, how to benefit from multiple programming paradigms, and adopting high-level languages comprise a significant improvement that raised the success rate of students to above 75\%.}
 
-\cventry{2020}{Workflow management tool review for ETL orchestration at TRE-RN}{Postgraduate apprenticeship on Information technology}{Thiago de Oliveira}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
+\cvline{}{\hrule}
+
+\cventry{2020-}{Fluent Python development}{Graduate apprenticeship}{GERTEC Commercial and Banking Automation Technology}{São Paulo, SP, Brazil}%
+{This course was provided in the scope of a graduate apprenticeship programme sponsored by the private sector. I designed and delivered this course as a collection of valuable insights, tutorials, and lessons made available by the Python community, the most emblematic being the Fluent Python book by Luciano Ramalho. Part of the lessons used in this course are now publicly available as a GitHub repository.}
+
+\cvline{}{\hrule}
+
+\cventry{2019-}{Coding interview preparation}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2018-}{Algorithms and data structures}{Professional Master's in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I (re-)designed and delivered these modules on coding interviewing, which were created to help students prepare for real-world job interviews. The modules comprise coding interview problems and practice, allowing students to learn the most common techniques and abilities required in this type of scenario. For undergraduate courses, the module also comprises invited talks from alumni who have extensive experience in the industry (and interviewing), as well as invited recruiters from companies. These modules are very important and timely, as shortly after their first editions the demand for information technology professionals surged as a function of the COVID-19 pandemic.}
+
+\cvline{}{\hrule}
+
+\cventry{2018-}{Computational thinking}{BSc in Information technology, BSc in Computer science, BEng in Software engineering}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design and deliver this introductory module on computational thinking. In detail, the original course curriculum introduced computer programming using a low-level textual programming language, hindering the problem-solving learning ability of the students and leading to an above 50\% failure rate. Conversely, this module introduces computational thinking from a gamified visual programming perspective, which later evolves to high-level textual programming. Using these approaches, the course is able to focus on problem-solving through computational thinking, and the success rate of this module is often above 75\%.}
+
+\cvline{}{\hrule}
+
+\cventry{2016-2017}{Design and analysis of algorithms}{BSc in Computer science, BEng in Computer engineering}{Federal University of Paraíba}{Brazil}{}
+\cventry{2016-2017}{Graph applications}{BSc in Mathematical computing}{Federal University of Paraíba}{Brazil}{}
+\cventry{2016-2017}{The scientific method}{BSc in Mathematical computing}{Federal University of Paraíba}{Brazil}%
+{I helped redesign and deliver these courses at the Federal University of Paraíba to better address the needs of the students enrolled in the university undergraduate programmes. In detail, the course on algorithm analysis and heuristic optimization for computer science and engineering students was originally designed with a strong emphasis on theory, under the assumption that students did not present well-developed programming abilities. Yet, results when the original theoretical approach was combined with a practical perspective were exceptional, with students delivering final projects that were outstanding. Similarly, the mathematical computing curriculum only included graph theory, lacking the study of graph applications. Finally, the course on the scientific method was timely to counter the then incipient anti-science campaigns that would later significantly impact Brazil.}
+
+\subsection{Artificial intelligence \& Data science}
+
+\cventry{2022}{Unsupervised learning for time series analysis}{Postgraduate apprenticeship in Information technology}{5th Region Federal Regional Court (TRF5), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2021-}{Deep learning for natural language processing}{Postgraduate apprenticeship in Information technology}{Federal Justice Section of Rio Grande do Norte (JFRN), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2021}{Deep learning for natural language processing}{Postgraduate apprenticeship in Information technology}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2021}{MLOps}{Postgraduate apprenticeship in Information technology}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2021}{MLOps}{Postgraduate apprenticeship in Information technology}{Federal Justice Section of Rio Grande do Norte (JFRN), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2020}{Chatbots}{Postgraduate apprenticeship in Information technology}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte}{Brazil}{}
+\cventry{2020-2021}{Deep learning for computer vision}{HCIA-AI certificate training program}{Huawei Telecommunications of Brazil}{Brazil}%
+{I helped formulate and deliver these modules on practically relevant machine learning techniques, domains, and applications which were offered in partnership with the public and private sector. Concerning the public sector, the modules were offered to complement the existing postgraduate apprenticeship curriculum, as follows. First, the traditional curriculum does not include more specific topics such as time series analysis, chatbots, nor MLOps. Second, these modules helped meet the timely needs of the institutions that sponsored the postgraduate apprenticeships. Regarding the private sector, the partnership with Huawei for certificate training enabled hundreds of students to study online with no tuition costs during the COVID-19 pandemic. Importantly, the students who got certified at the end of the course were strategically positioned to land jobs with the company of their choosing.}
+
+\cvline{}{\hrule}
+
+\cventry{2020-}{Data-driven decision making}{Continuing education}{Federal Justice Section of Rio Grande do Norte (JFRN), Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{This course was provided in the scope of a continuing education programme sponsored by the public sector, namely the Brazilian Judicial Branch. I designed and delivered this course as a combination of (i)~the data science for non-programmers course, which I designed and deliver yearly, and; (ii)~my expertise on multi-decision criteria making, acquired over the years of my research career. Importantly, the audience enrolled in this course was mostly from social sciences, humanities, and health sciences, and so the successful results of the course serve as strong validation of the IT-agnostic methodology adopted.}
+
+\cvline{}{\hrule}
+
+\cventry{2020-}{Machine learning}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2022-}{Data mining}{Postgraduate apprenticeship in Information technology}{5th Region Federal Regional Court (TRF5), Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2020-}{Data mining}{Postgraduate apprenticeship in Information technology}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2019-}{Data mining}{Postgraduate apprenticeship in Information technology}{Federal Justice Section of Rio Grande do Norte (JFRN), Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2019-}{Data mining}{Postgraduate apprenticeship in Information technology}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2022-}{Data science}{MSc in Systems and computing}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2020-}{Data science}{Professional Master's in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{}
+\cventry{2019-}{Data science}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I designed and delivered these course modules on data science, data mining, and machine learning to help prepare students for the increasing industrial and academic demand on these topics. Importantly, these modules where designed so that they can be delivered at different levels of education and for students with different levels of IT proficiency. Indeed, the modules have been offered a total 14 times over the past four academic years, evidencing the strong demand for this skill set. The modules adopt the project-based learning methodology, where external collaborators propose topics and act as stakeholders throughout the modules. This approach allows students to understand the whole data science and machine learning process, starting at the formulation of relevant questions and ending with the communication of relevant insights. The active and IT-agnostic methodology proposed for these modules was published as a chapter in a book organized by the LISA international network for statistical learning, and the material used in the courses are freely available as public GitHub repositories.}
+
+\section{Educational objects}
+
+% \cvline{disclaimer}{\textit{Most of these objects were created in Brazilian Portuguese to meet the social and cultural needs of the region where Universidade Federal do Rio Grande do Norte is located.}}
+
+\cventry{2020}{\href{https://github.com/leobezerra/scikit-zero}{scikit-zero}}{Machine learning before programming}{Editor}{GitHub}{}
+
+\cventry{2020}{\href{https://github.com/leobezerra/pandas-zero}{pandas-zero}}{Data science before programming}{Editor}{GitHub}{}
+
+\cventry{2020}{\href{https://github.com/leobezerra/ds-zero}{ds-zero}}{Data science before prediction}{Organizer}{GitHub}{}
+
+\cventry{2019}{\href{https://github.com/leobezerra/leetcode-hero}{leetcode-hero}}{Abstract data types and algorithmic techniques to solve programming interview problems}{Organizer}{GitHub}{}
+
+\cventry{2019}{\href{https://github.com/leobezerra/python-tads}{python-tads}}{Abstract data types with Python}{Organizer}{GitHub}{}
+
+\cventry{2019}{\href{https://github.com/leobezerra/pensamento-computacional}{pensamento-computacional}}{Unplugged computational thinking}{Creator}{GitHub}{}
+
+\cventry{2018}{\href{https://github.com/leobezerra/python-hero}{python-hero}}{Learning the Zen of Python from the community}{Organizer}{GitHub}{}
+
+\cventry{2018}{\href{https://github.com/leobezerra/python-zero}{python-zero}}{Computational thinking with Python}{Creator}{GitHub}{}
+
+\section{Supervision}
 
 \subsection{Undergraduate (final year)}
 
@@ -172,31 +196,13 @@ My current position at Federal University of Rio Grande do Norte~(UFRN) as a Lec
 
 \cventry{2019}{Using artificial intelligence to aid depression detection}{BEng in Computer engineering}{Deângela Caroline Gomes Neves}{Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\section{Course modules}
+\subsection{Postgraduate apprenticeship}
 
-\subsection{Computational thinking}
+\cventry{2021}{Municipal revenue at the Rio Grande do Norte state}{Postgraduate apprenticeship on Information technology}{Paulo Roberto Oliveira de Melo}{Court of Accounts of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2023-}{Abstract data types}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
-{I helped design and deliver this module on the definition and applications of abstract data types. In detail, the original course curriculum only comprised algorithms and data structures, and had an above 50\% failure rate. Introducing abstract data types prior to the data structures used to implement them significantly improved the success rate of the course, often surpassing 75\%. This is in part due to student evaluation, which is in part performed via coding interviews.}
+\cventry{2020}{A data-driven approach to aid payment auditing in the Court of Accounts of the State of Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Gabriel Felipe Azevedo de Sousa}{Court of Accounts of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2023-}{Fundamentals of multi-paradigm, high-level software development}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
-{I helped design this module on the fundamentals of software development using multiple programming paradigms and high-level programming languages. In detail, the original course curriculum (i)~only comprised computer programming, disregarding critical software development fundamentals such as testing and versioning; (ii)~only adopted the procedural and object-oriented programming paradigms, both from purist perspectives, and; (iii)~adopted low-level programming languages. Altogether, these factors hindered student engagement as courses were seen as unrealistic, leading to an above 50\% failure rate. Introducing software development fundamentals, how to benefit from multiple programming paradigms, and adopting high-level languages comprise a significantly improvement that is expected to raise the success rate of students.}
+\cventry{2020}{Business intelligence to aid electoral accounts auditing in Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Giuliard Cosmo Rodrigues}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2019-2019}{Coding interview preparation}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
-{I helped design and deliver this introductory module on coding interviewing, which was created to help students prepare for real-world job interviews. The course comprised invited talks from alumni who had extensive experience in the industry (and interviewing) and coding interview problems and practice, which included invited recruiters from companies. Though experimental, this module was very important and timely as shortly after its delivery the demand for information technology professionals surged as a function of the pandemic.}
+\cventry{2020}{Workflow management tool review for ETL orchestration at TRE-RN}{Postgraduate apprenticeship on Information technology}{Thiago de Oliveira}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2018-}{Computational thinking}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
-{I helped design and deliver this introductory module on computational thinking. In detail, the original course curriculum introduced computer programming using a low-level textual programming language, hindering the problem-solving learning ability of the students and leading to an above 50\% failure rate. Conversely, this module introduces computational thinking from a gamified visual programming perspective, which later evolves to high-level textual programming. Using these approaches, the course is able to focus on problem-solving through computational thinking, and the success rate of this module is often above 75\%.}
-
-\cventry{2017-}{Algorithms and data structures}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
-{I helped design and deliver this course .}
-
-\cventry{2017-2018}{Programming languages}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{Something about this}
-
-\cventry{2016-2017}{Design and analysis of algorithms}{BSc in Computer science}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
-
-\cventry{2016-2017}{The scientific method}{BSc in Mathematical computing}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
-
-\cventry{2016-2017}{Graph applications}{BSc in Mathematical computing}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
-
-\end{document}
